src/objects/Apttus__AsyncMergeCall__c.object
<CustomObject>
    <description>Holds asynchronous merge calls</description>
    <fields>
        <fullName>Apttus__Action__c</fullName>
        <description>The merge action</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Preview</fullName>
                </value>
                <value>
                    <fullName>Generate</fullName>
                </value>
                <value>
                    <fullName>Generate Supporting Document</fullName>
                </value>
                <value>
                    <fullName>Regenerate</fullName>
                </value>
                <value>
                    <fullName>Publish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The associated agreement</description>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipName>AsyncMerge_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__CallType__c</fullName>
        <description>The call type</description>
        <label>Call Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Merge Document</fullName>
                </value>
                <value>
                    <fullName>Publish Document</fullName>
                </value>
                <value>
                    <fullName>Publish Document (Job)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__CustomObjectId__c</fullName>
        <description>ID of the associated custom object</description>
        <inlineHelpText>ID of the associated custom object</inlineHelpText>
        <label>Custom Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__DocumentFormat__c</fullName>
        <description>The output format of the merged document</description>
        <label>Document Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DOC</fullName>
                </value>
                <value>
                    <fullName>RTF</fullName>
                </value>
                <value>
                    <fullName>PDF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__EndTime__c</fullName>
        <description>Call end time</description>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus__Exception__c</fullName>
        <description>The exception reported by the call</description>
        <label>Exception</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__IsDraft__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the merged document is a draft</description>
        <label>Is Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__ProtectionLevel__c</fullName>
        <description>The protection level applied to the merged document.</description>
        <label>Protection Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full access</fullName>
                </value>
                <value>
                    <fullName>Insert comments and tracked changes only</fullName>
                </value>
                <value>
                    <fullName>Insert comments only</fullName>
                </value>
                <value>
                    <fullName>Fill in form fields only</fullName>
                </value>
                <value>
                    <fullName>Read only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Result__c</fullName>
        <description>The call result</description>
        <label>Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__StartTime__c</fullName>
        <description>Call start time</description>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus__Status__c</fullName>
        <description>Call status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The associated template</description>
        <label>Template</label>
        <referenceTo>Apttus__APTS_Template__c</referenceTo>
        <relationshipName>AsyncMerge_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__VersionDetailId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated document version detail</description>
        <inlineHelpText>ID of the associated document version detail</inlineHelpText>
        <label>Version Detail</label>
        <referenceTo>Apttus__DocumentVersionDetail__c</referenceTo>
        <relationshipLabel>Async Merge Calls</relationshipLabel>
        <relationshipName>AsyncMergeCalls</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Async Merge Call</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>CallId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Async Merge Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>